[tool.poetry]
name = "parasect"
version = "1.2.0"
description = "Utility for manipulating parameter sets for autopilots."
authors = ["George Zogopoulos <geo.zogop.papal@gmail.com>"]
license = "MIT"
readme = "README.rst"
homepage = "https://github.com/AvyFly/parasect"
repository = "https://github.com/AvyFly/parasect"
documentation = "https://parasect.readthedocs.io"
classifiers = [
    "Development Status :: 5 - Production/Stable",
]

[tool.poetry.urls]
Changelog = "https://github.com/AvyFly/parasect/releases"

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.0.1"
PyYAML = "^6.0"
defusedxml = "^0.7.1"
pydantic = "^1.9.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
coverage = {extras = ["toml"], version = "^7.2"}
safety = "^2.3.0"
mypy = "^1.3.0"
typeguard = "^2.13.3"
xdoctest = {extras = ["colors"], version = "^1.0.0"}
sphinx = "^6.2.1"
sphinx-autobuild = ">=2021.3.14"
pre-commit = "^3.2.2"
flake8 = "^4.0.1"
black = ">=21.10b0"
flake8-bandit = "^3.0.0"
flake8-bugbear = "^23.3.12"
flake8-docstrings = "^1.6.0"
flake8-rst-docstrings = "^0.3.0"
pep8-naming = "^0.13.0"
darglint = "^1.8.1"
reorder-python-imports = "^3.1.0"
pre-commit-hooks = "^4.3.0"
sphinx-click = "^4.4.0"
Pygments = "^2.10.0"
pyupgrade = "^3.4.0"
furo = ">=2022.12.7"

[tool.poetry.scripts]
parasect = "parasect.__main__:cli"

[tool.poetry.group.dev.dependencies]
directory-tree = "^0.0.3.1"

[tool.coverage.paths]
source = ["src", "*/site-packages"]
tests = ["tests", "*/tests"]

[tool.coverage.run]
branch = true
source = ["parasect", "tests"]

[tool.coverage.report]
show_missing = true
fail_under = 98

[tool.mypy]
strict = false
warn_unused_configs = true
disallow_any_generics = false
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = false
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
no_implicit_reexport = true
strict_equality = true
warn_unreachable = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true

[build-system]
requires = ["poetry-core>=1.3.0"]
build-backend = "poetry.core.masonry.api"
