[project]
name = "parasect"
version = "1.2.0"
description = "Utility for manipulating parameter sets for autopilots."
authors = [{ name = "George Zogopoulos", email = "geo.zogop.papal@gmail.com" }]
requires-python = ">=3.10,<4"
readme = "README.rst"
license = "MIT"
classifiers = ["Development Status :: 5 - Production/Stable"]
dependencies = [
    "click>=8.0.1,<9",
    "PyYAML>=6.0,<7",
    "defusedxml>=0.7.1,<0.8",
    "pydantic>=2.0.0,<3",
]

[project.urls]
Homepage = "https://github.com/AvyFly/parasect"
Repository = "https://github.com/AvyFly/parasect"
Documentation = "https://parasect.readthedocs.io"
Changelog = "https://github.com/AvyFly/parasect/releases"

[project.scripts]
parasect = "parasect.__main__:cli"

[dependency-groups]
dev = [
    "pytest>=7.1.2,<8",
    "coverage[toml]>=7.2,<8",
    "safety>=2.3.0,<3",
    "mypy>=1.3.0,<2",
    "typeguard>=4.1.3,<5",
    "xdoctest[colors]>=1.0.0,<2",
    "sphinx>=7.1.2,<8",
    "sphinx-autobuild>=2021.3.14",
    "pre-commit>=3.2.2,<4",
    "flake8>=5.0.4,<6",
    "black>=21.10b0",
    "flake8-bandit>=4.0.0,<5",
    "flake8-bugbear>=23.3.12,<24",
    "flake8-docstrings>=1.6.0,<2",
    "flake8-rst-docstrings>=0.3.0,<0.4",
    "pep8-naming>=0.13.0,<0.14",
    "darglint>=1.8.1,<2",
    "reorder-python-imports>=3.1.0,<4",
    "pre-commit-hooks>=4.3.0,<5",
    "sphinx-click>=5.0.1,<6",
    "Pygments>=2.10.0,<3",
    "pyupgrade>=3.4.0,<4",
    "furo>=2022.12.7",
    "directory-tree>=0.0.4,<0.0.5",
]
nox = [
    "nox-uv>=0.6.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.coverage.paths]
source = ["src", "*/site-packages"]
tests = ["tests", "*/tests"]

[tool.coverage.run]
branch = true
source = ["parasect", "tests"]

[tool.coverage.report]
show_missing = true
fail_under = 98

[tool.mypy]
strict = false
warn_unused_configs = true
disallow_any_generics = false
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = false
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
no_implicit_reexport = true
strict_equality = true
warn_unreachable = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
